// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform attributes Should transform boolean prop 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\", {
  focused: true
});"
`;

exports[`transform attributes Should transform cssx var 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\", {
  \\"css:$var\\": true
});"
`;

exports[`transform attributes Should transform different props variations 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\" + \\"Key\\", {
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
});"
`;

exports[`transform attributes Should transform different props with ref 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\" + \\"Key\\", {
  ref: myRef,
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
});"
`;

exports[`transform attributes Should transform different props with ref onMount onUnmount 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\" + \\"Key\\", {
  ref: myRef,
  onMount: onMount,
  onUnmount: onUnmount,
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
});"
`;

exports[`transform attributes Should transform key prop 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\" + \\"Key\\", {});"
`;

exports[`transform attributes Should transform namespaced name 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\", {
  \\"css:blue\\": true
});"
`;

exports[`transform attributes Should transform props spread 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\", { ...props
});"
`;

exports[`transform attributes Should transform props with expressions 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\", {
  prop1: 1 + 1
});"
`;

exports[`transform attributes Should transform simple props 1`] = `
"import { html as _html } from \\"@whatsup/jsx\\";

_html(\\"div\\", \\"UniqueId_\\", {
  prop1: \\"value1\\"
});"
`;
